# learning-in-opencamp

./: .gitmodules  Cargo.toml  GITHUB_ACTIONS_GUIDE.md  LICENSE  README.md  cxx_test_output.txt  eval_result.json  test_output.txt
.cargo/: config.toml
.github/result/: cxx_result.json  cxx_summary.json  exercises_result.json  exercises_summary.json
.github/workflows/: test.yml
course/: Cargo.toml
environment/: Cargo.toml
report/: index.html  style.css
xtask/: Cargo.toml
xtask/src/: eval.rs  learn.rs  main.rs  setup.rs
