[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true

[dependencies]
environment.path = "../environment"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
colored = "2.0"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
regex = "1.10"
tempfile = "3.8"
